# AquaFavela

./: .gitignore  CMakeLists.txt  README.md
Docs/: Doxyfile
include/: AdminDialog.h  AuthService.h  ConsumptionService.h  DatabaseManager.h  LoginDialog.h  User.h  mainwindow.h  watermonitor.h
src/: AdminDialog.cpp  AuthService.cpp  ConsumptionService.cpp  DatabaseManager.cpp  LoginDialog.cpp  User.cpp  main.cpp  mainwindow.cpp  watermonitor.cpp
tests/: testes.cpp
ui/: admindialog.ui  logindialog.ui  mainwindow.ui
